// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scrollable > basic rendering > clips content that overflows vertically 1`] = `
"Line 0   █
Line 1
Line 2"
`;

exports[`Scrollable > basic rendering > renders content that fits without scrolling 1`] = `
"Line 0
Line 1
Line 2"
`;

exports[`Scrollable > children fill full content width > flex slider in nested stacks fills scrollable content width 1`] = `
"╭─┬─────────────────
│◃│─────────────────
╰─┴─────────────────

AAAAAAAAAAAAAAAAAAAA"
`;

exports[`Scrollable > children fill full content width > progress bar fills scrollable content width 1`] = `
"████████████████████

AAAAAAAAAAAAAAAAAAAA"
`;

exports[`Scrollable > offset and onOffsetChange > sets initial offset via prop 1`] = `"██████────"`;

exports[`Scrollable > pin > horizontally pinned child uses visible width, not content width 1`] = `
"████████──────╴
AAAAAAAAAAAAAAA"
`;

exports[`Scrollable > pin > multiple pinned children all stay visible 1`] = `
"Header
████████─╴
ABCDEFGHIJ"
`;

exports[`Scrollable > pin > pinned child does not overlap vertical scrollbar 1`] = `
"╶───────╴█
XXXXXXXXX
XXXXXXXXX
XXXXXXXXX
████     █"
`;

exports[`Scrollable > pin > pinned slider fills visible width in wide scrollable 1`] = `
"──────╴█╶──────
AAAAAAAAAAAAAAA"
`;

exports[`Scrollable > pin > vertically pinned child in horizontal stack uses visible height 1`] = `
"╭───╮
│   │
▐███▌
▐███▌
▐███▌"
`;

exports[`Scrollable > scrollbar rendering > renders almost full-size scrollbars when content is only slightly larger than the viewport 1`] = `
{
  "0%": {
    "horizontal": "█████████████████████████████████████████████████████████████████████████████████████████████████..",
    "vertical": "█████████████████████████████████████████████████████████████████████████████████████████████████..",
  },
  "100%": {
    "horizontal": "..█████████████████████████████████████████████████████████████████████████████████████████████████",
    "vertical": "..█████████████████████████████████████████████████████████████████████████████████████████████████",
  },
  "33%": {
    "horizontal": ".█████████████████████████████████████████████████████████████████████████████████████████████████.",
    "vertical": ".█████████████████████████████████████████████████████████████████████████████████████████████████.",
  },
  "66%": {
    "horizontal": ".█████████████████████████████████████████████████████████████████████████████████████████████████.",
    "vertical": ".█████████████████████████████████████████████████████████████████████████████████████████████████.",
  },
}
`;

exports[`Scrollable > scrollbar rendering > renders half-size scrollbars when content is about twice the viewport 1`] = `
{
  "0%": {
    "horizontal": "█████....",
    "vertical": "█████....",
  },
  "100%": {
    "horizontal": "....█████",
    "vertical": "....█████",
  },
  "33%": {
    "horizontal": ".█████...",
    "vertical": ".█████...",
  },
  "66%": {
    "horizontal": "...█████.",
    "vertical": "...█████.",
  },
}
`;

exports[`Scrollable > scrollbar rendering > renders single-cell scrollbars when content is much larger than the viewport 1`] = `
{
  "0%": {
    "horizontal": "█........",
    "vertical": "█........",
  },
  "100%": {
    "horizontal": "........█",
    "vertical": "........█",
  },
  "33%": {
    "horizontal": "...█.....",
    "vertical": "...█.....",
  },
  "66%": {
    "horizontal": ".....█...",
    "vertical": ".....█...",
  },
}
`;

exports[`Scrollable > scrollbar rendering > scrollbar thumb snapshots stay the same size at different positions 1`] = `
{
  "horizontal": [
    "████........",
    "..████......",
    "........████",
  ],
  "vertical": [
    "███.....",
    "..███...",
    ".....███",
  ],
}
`;
